More Haskell yo

--- a/haskell/package.yaml
+++ b/haskell/package.yaml
@@ -7,8 +7,7 @@ dependencies:
 library:
   source-dirs: src
   dependencies:
-  # - foo       # List here the packages you
-  # - bar       # want to use in your solution.
+  - split
 
 executables:
   mars:
