--- a/haskell/mars.cabal
+++ b/haskell/mars.cabal
@@ -12,7 +12,9 @@ library
       src
   build-depends:
       base
+    , split
   exposed-modules:
+      Data.Instruction
       Data.Robot
   default-language: Haskell2010
 
@@ -34,5 +36,6 @@ test-suite test
     , mars
     , hspec
   other-modules:
+      Data.InstructionSpec
       Data.RobotSpec
   default-language: Haskell2010
