Performing series of instructions

--- a/haskell/mars.cabal
+++ b/haskell/mars.cabal
@@ -16,6 +16,7 @@ library
     , containers
   exposed-modules:
       Control.Exploration
+      Data.Either.Extra
       Data.Instruction
       Data.Planet
       Data.Robot
