--- a/haskell/mars.cabal
+++ b/haskell/mars.cabal
@@ -1,4 +1,4 @@
--- This file has been generated from package.yaml by hpack version 0.17.0.
+-- This file has been generated from package.yaml by hpack version 0.17.1.
 --
 -- see: https://github.com/sol/hpack
 
@@ -19,6 +19,7 @@ library
       Data.Either.Extra
       Data.Instruction
       Data.Planet
+      Data.Position
       Data.Robot
   default-language: Haskell2010
 
